force-app/main/default/objects/CE_Session__c/fields/Assignment_Required__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Required</label>
    <type>Checkbox</type>
</CustomField>