force-app/main/default/objects/CE_Session__c/fields/CE_Module__c.field-meta.xml
<CustomField>
    <fullName>CE_Module__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CE-Module</label>
    <referenceTo>CE_Modules__c</referenceTo>
    <relationshipLabel>CE-Sessions</relationshipLabel>
    <relationshipName>CE_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>