force-app/main/default/objects/CE_Session__c/fields/Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment__c</fullName>
    <formula>CASESAFEID(CE_Module__r.Course_Enrollment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Enrollment</label>
    <type>Text</type>
</CustomField>