force-app/main/default/objects/CE_Session__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>IF( OR( VALUE( MID( TEXT(   End_DateTime__c + 330/1440), 12, 2 ) ) = 0, VALUE( MID( TEXT( End_DateTime__c + 330/1440 ), 12, 2 ) ) = 12 ), &quot;12&quot;, TEXT( VALUE( MID( TEXT( End_DateTime__c + 330/1440 ), 12, 2 ) ) - IF( VALUE( MID( TEXT( End_DateTime__c + 330/1440), 12, 2 ) ) &lt; 12, 0, 12 ) ) ) &amp; &quot;:&quot; &amp; MID( TEXT( End_DateTime__c + 330/1440), 15, 2 ) &amp;&quot; &quot; &amp; IF( VALUE( MID( TEXT( End_DateTime__c + 330/1440 ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Text</type>
</CustomField>