force-app/main/default/objects/CE_Session__c/fields/Enrollment_s_Contact__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_s_Contact__c</fullName>
    <formula>CASESAFEID(CE_Module__r.Course_Enrollment__r.Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment&apos;s Contact</label>
    <type>Text</type>
</CustomField>