force-app/main/default/objects/CE_Session__c/fields/Exact_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Exact_Start_time__c</fullName>
    <formula>(TIMEVALUE(Start_DateTime__c + 330/1440))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exact Start time</label>
    <type>Time</type>
</CustomField>