force-app/main/default/objects/CE_Session__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Link__c</fullName>
    <label>Meeting Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>