force-app/main/default/objects/CE_Session__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <formula>CE_Module__r.Course_Enrollment__r.Contact__r.FirstName  +  CE_Module__r.Course_Enrollment__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mentor</label>
    <type>Text</type>
</CustomField>