force-app/main/default/objects/CE_Session__c/fields/Mentor_Email__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Email__c</fullName>
    <formula>CE_Module__r.Course_Enrollment__r.Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mentor Email</label>
    <type>Text</type>
</CustomField>