force-app/main/default/objects/CE_Session__c/fields/Mentor_Id__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Id__c</fullName>
    <formula>CE_Module__r.Course_Enrollment__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mentor Id</label>
    <type>Text</type>
</CustomField>