force-app/main/default/objects/CE_Session__c/fields/Replanned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Replanned_Date_Time__c</fullName>
    <label>Replanned Date Time</label>
    <type>DateTime</type>
</CustomField>