force-app/main/default/objects/CE_Session__c/fields/Session_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Session_Agenda__c</fullName>
    <label>Session Agenda</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>