force-app/main/default/objects/CE_Session__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <formula>IF(ISNULL(Start_DateTime__c)|| ISNULL(End_DateTime__c),0,(End_DateTime__c-Start_DateTime__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session&apos;s Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>