force-app/main/default/objects/CE_Session__c/fields/Session_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Title__c</fullName>
    <label>Session Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>