force-app/main/default/objects/CE_Session__c/fields/Video_Url__c.field-meta.xml
<CustomField>
    <fullName>Video_Url__c</fullName>
    <label>Video Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>