force-app/main/default/objects/CE_Session__c/listViews/All_CE_Sessions.listView-meta.xml
<ListView>
    <fullName>All_CE_Sessions</fullName>
    <columns>NAME</columns>
    <columns>CE_Module__c</columns>
    <columns>Mentor__c</columns>
    <columns>Mentor_Email__c</columns>
    <columns>Session_Duration__c</columns>
    <columns>Session_Title__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>End_DateTime__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CE_Sessions</label>
</ListView>